# University

./: CMakeLists.txt  University.sln
Task21_CoprimeNumbers/: Task21_CoprimeNumbers.cpp  Task21_CoprimeNumbers.vcxproj  Task21_CoprimeNumbers.vcxproj.filters
Task21_LinesPosition/: StringExtensions.cpp  StringExtensions.h  main.cpp
Task21_MatrixElementsSearch/: Task21_MatrixElementsSearch.cpp  Task21_MatrixElementsSearch.vcxproj  Task21_MatrixElementsSearch.vcxproj.filters
Task21_PalindromCheck/: Task21_PalindromCheck.cpp  Task21_PalindromCheck.vcxproj  Task21_PalindromCheck.vcxproj.filters
Task21_Phonebook/: PhoneBook  StringExtensions.cpp  StringExtensions.h  Task21_Phonebook.cpp  Task21_Phonebook.vcxproj  Task21_Phonebook.vcxproj.filters
Task21_StudentsInfo/: StringExtensions.cpp  StringExtensions.h  StudentsInfo  Task21_StudentsInfo.cpp  Task21_StudentsInfo.vcxproj  Task21_StudentsInfo.vcxproj.filters
Task21_ThreeLinesIntersection/: Task21_ThreeLinesIntersection.c  Task21_ThreeLinesIntersection.vcxproj  Task21_ThreeLinesIntersection.vcxproj.filters
enc_temp_folder/ad1239b14e9ad463e27e3b74d30fe15/: Task21_MatrixElementsSearch.cpp
